@@ -5,8 +5,9 @@ copyright_holder = Dan Book
 copyright_year   = 2015
 
 [@Author::DBOOK]
-:version = 0.020
+:version = 0.032
 installer = ModuleBuildTiny::Fallback
+irc = irc://irc.perl.org/#mojo
 pod_tests = 1
 
 [Deprecated]
