@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add links to alternatives for deprecated Mojo::SQLite::PubSub.
 
 1.002     2016-11-30 11:17:56 EST
   - Improved contextual caller information in query error messages. (#6)
